# opstop_ros

./: .gitignore  .gitmodules  .tidyrc  CMakeLists.txt  README.md  package.xml
cfg/: FollowJointTrajectoryActionWrapperDynamicReconfigure.cfg
config/: example_control_conf.yaml  rviz.rviz  rviz_franka.rviz
docker/: build_image.bash  container-start.bash  image.dockerfile  vim_installation.bash
docker/configfiles/: vimrc
gsplines_opstop/: CMakeLists.txt  package.xml
gsplines_optop/: CMakeLists.txt  package.xml
include/opstop_ros/: follow_joint_trajectory_action_wrapper.hpp
launch/: franka_example.launch  wrapper_example.launch
opstop_ros/: CMakeLists.txt
opstop_ros/config/: example_control_conf.yaml
opstop_ros/include/opstop_ros/: follow_joint_trajectory_action_wrapper.hpp
opstop_ros/launch/: franka_example.launch  wrapper_example.launch
opstop_ros/scripts/: joint_trajectory_plotter
opstop_ros/src/: follow_joint_trajectory_action_wrapper.cpp  follow_joint_trajectory_action_wrapper_node.cpp
scripts/: optsop_test  timed_stopper
src/: follow_joint_trajectory_action_wrapper.cpp  follow_joint_trajectory_action_wrapper_node.cpp
